# AutoMeetsSlide

./: .gitignore  CLAUDE.md  README.md  appcast.xml
.claude/commands/: install-latest.md  release.md
.derivedData/: info.plist
.xcodebuildmcp/: config.yaml
macos-app/: project.yml
macos-app/AutoMeetsSlide.xcodeproj/: project.pbxproj
macos-app/Sources/AutoMeetsSlide/: AutoMeetsSlideApp.swift  Info.plist
macos-app/Sources/AutoMeetsSlide/Components/: GoogleLoginWebView.swift
macos-app/Sources/AutoMeetsSlide/Models/: FileItem.swift
macos-app/Sources/AutoMeetsSlide/Services/: AuthService.swift  FolderWatcherService.swift  NotificationManager.swift  SidecarManager.swift  StorageStateConverter.swift
macos-app/Sources/AutoMeetsSlide/Utilities/: Logger.swift
macos-app/Sources/AutoMeetsSlide/ViewModels/: AppState.swift
macos-app/scripts/: build.sh  generate_icon.py  notarize.sh  package_dmg.sh  release.sh  update_appcast.sh
python-sidecar/: notebooklm-cli.spec  notebooklm_sidecar.py  requirements.txt
tauri-app/: .gitignore  debug.html  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  debug.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src/components/: LoginScreen.tsx  MainApp.tsx
tauri-app/src/hooks/: useAuth.ts  useFileQueue.ts  useQueueProcessor.ts  useSidecar.ts  useWindowState.ts
tauri-app/src/store/: appStore.ts  settingsStore.ts  types.ts
tauri-app/src/styles/: index.css
tauri-app/src/utils/: filePicker.ts  fileUtils.ts  logger.ts
tauri-app/src/windows/: DebugWindow.tsx
(+10 files in other folders)
