[package]
name = "notebooklm-app"
version = "0.1.0"
description = "A Tauri app for NotebookLM"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "dialog-open", "path-all", "shell-execute", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
